--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
       "express": "^4.17.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.31",
-      "uuid": "^8.3.2"
+      "typeorm": "0.2.31"
    },
    "scripts": {
       "nodemon": "nodemon",
