--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,8 +3,8 @@
    "host": "localhost",
    "port": 5432,
    "username": "postgres",
-   "password": "test",
-   "database": "test_psql",
+   "password": "admin",
+   "database": "test_crud",
    "synchronize": true,
    "logging": false,
    "entities": [
